ALPHA: Primeira versão funcional de interface, database e gerenciamento

--- a/interface/style.css
+++ b/interface/style.css
@@ -1,26 +1,47 @@
 Screen{
     align: center middle;
+    width: 100%;
 }
 
 .main_container{
     align: center middle;
-    width: 100%;
-    height: 100%;
-    content-align: center middle;
+
+    width: 55vw;
+    height: 95%;
+      
+}
+.mini_container{ 
+    align: center middle;
+    height: 20vh;
+ 
+    
+}
+
+.description_container{ 
+    align: center middle;
+    height: 20vh;
+ 
+    
+}
+
+.button_container{
+    align: center middle;
+    height: 20vh;
+ 
+        
 }
 
 Input{
-    width: 40%;
-    margin: 1 0;
-    border: $primary;
+    border: $primary;  
 }
 
 #value{
-    width: 8%;
+    height: 4;
+    width: 40%;
 }
 #description{
-    width: 40%;
-    height: 10%;
+    height: 4;
+    width: 86%;
 }
 
 Input.-valid{
@@ -32,7 +53,18 @@ Input.-valid:focus {
 }
 
 RadioSet {
-    width: 40%;
     align: center middle;
     border: $primary;
+    width: 35%;
+    margin: 0 0 0 5;
+}
+
+Button{
+    content-align: center middle;
+    border: $primary;
+    width: 40%;
+    height: 40%;
+    background: $primary;
+    margin: 0 1;
+
 }
